--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <script>
         const video = document.getElementById('video');
-        const ws = new WebSocket('ws://localhost:9999');
+        const ws = new WebSocket('ws://192.168.1.26:9999');
 
         ws.onmessage = (event) => {
             const blob = new Blob([event.data], { type: 'video/mp2t' });
